--- a/task2/建议书.md
+++ b/task2/建议书.md
@@ -56,11 +56,25 @@
 
 2.4架构设计	3天
 
-3应用设计	  14天
+3应用设计	  6天
 
-3.1前台部分	7天
+3.1前台部分	3天
 
-3.2后台部分	7天
+3.2后台部分	3天
+
+4应用构建与部署 10天
+
+5应用测试 2天
+
+6应用运维 2天
+
+7应用分析 7天
+
+7.1性能分析 2天
+
+7.2可用性分析 2天
+
+7.3安全性分析 3天
 
 四、组织信息
 
